feat(move): Allow the user to create folder inside move modal

--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -580,6 +580,7 @@
     "cancelledWithRestoreErrors": "%{subject} has been moved back to it's original location but there was an error while restoring the file from trash. |||| %{smart_count} elements have been moved back to their original location but there was %{restoreErrorsCount} error(s) while restoring the file(s) from trash.",
     "cancelled_error": "Sorry, there was an error while moving the element back. |||| Sorry, there was an error while moving these elements back.",
     "multipleEntries": "%{smart_count} element |||| %{smart_count} elements",
+    "addFolder": "Add a folder",
     "outsideSharedFolder": {
       "title": "Moving outside the %{sharedFolder} folder",
       "content_1": "Warning, you want to move %{name} out of the shared %{sharedFolder} folder. |||| Warning, you want to move %{smart_count} %{type}s out of the shared %{sharedFolder} folder.",
