--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -774,5 +774,9 @@
     "file": "fichier |||| fichiers",
     "directory": "dossier |||| dossiers",
     "element": "élément |||| éléments"
+  },
+  "NotFound": {
+    "title": "L’élément est introuvable",
+    "text": "Nous n’avons trouvé aucun élément à cette adresse. Il s’agit peut-être d’une erreur de frappe."
   }
 }
