feat: Replace modale and qualifications from cozy-scanner
Following the migration of qualifications from
cozy-scanner to cozy-client, we are finally updating
this component in order to have only one source of truth.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -639,6 +639,7 @@
     }
   },
   "Scan": {
+    "none": "Nothing",
     "scan_a_doc": "Scan a doc",
     "save_doc": "Save the doc",
     "filename": "Filename",
