feat: Add the name of qualification to the action side
We prefer to see this information next to the right of the "qualify" action.

And change of wording of the action if the document is already qualified.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -645,6 +645,7 @@
     "save": "Save",
     "cancel": "Cancel",
     "qualify": "Categorize",
+    "requalify": "Re-categorize",
     "apply": "Apply",
     "error": {
       "offline": "You are currently offline and you can't use this functionnality. Try it later",
