feat: Add "my drive" in shared drives

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -9,6 +9,7 @@
     "item_settings": "Paramètres",
     "item_collect": "Administratif",
     "item_external_drives": "Drives partagés",
+    "item_my_drive": "Mon Drive",
     "btn-client": "Télécharger Cozy Drive ",
     "support-us": "Voir les offres",
     "support-us-description": "Vous souhaitez bénéficier de plus d’espace ou simplement soutenir cozy ?",
