--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,6 +9,7 @@
     "item_settings": "Settings",
     "item_collect": "Administrative",
     "item_external_drives": "Shared Drives",
+    "item_my_drive": "My Drive",
     "btn-client": "Get Cozy Drive for desktop",
     "support-us": "View offers",
     "support-us-description": "Would you like to benefit from more space or simply support cozy?",
