refactor: Rationalize externalDrive/sharedDrives
Use externalDrive name where suitable

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,7 +8,7 @@
     "item_trash": "Trash",
     "item_settings": "Settings",
     "item_collect": "Administrative",
-    "item_external_drives": "Shared Drives",
+    "item_shared_drives": "Shared Drives",
     "item_my_drive": "My Drive",
     "btn-client": "Get Cozy Drive for desktop",
     "support-us": "View offers",
