--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -8,7 +8,7 @@
     "item_trash": "Corbeille",
     "item_settings": "Paramètres",
     "item_collect": "Administratif",
-    "item_external_drives": "Drives partagés",
+    "item_shared_drives": "Drives partagés",
     "item_my_drive": "Mon Drive",
     "btn-client": "Télécharger Cozy Drive ",
     "support-us": "Voir les offres",
