feat: Implement new alert
remove old api use new api
add new button to go to folder

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -575,6 +575,7 @@
   },
   "Move": {
     "to": "Move to:",
+    "go_to_dir": "Open directory",
     "action": "Move",
     "cancel": "Cancel",
     "modalTitle": "Move",
