fix: Show Drives instead Drive into sidebar when there is shared drives

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,7 @@
 {
   "Nav": {
     "item_drive": "Drive",
+    "item_drives": "Drives",
     "item_recent": "Recent",
     "item_sharings": "Sharings",
     "item_shared": "Shared by me",
