--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -1,6 +1,7 @@
 {
   "Nav": {
     "item_drive": "Drive",
+    "item_drives": "Drives",
     "item_recent": "Récents",
     "item_sharings": "Partages",
     "item_shared": "Partagés",
