feat: Revamp Shared drives tab on mobile to match design specification
fix: Translation on NextcloudBreadcrumb

feat: improve type

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -788,5 +788,8 @@
   "NotFound": {
     "title": "The element cannot be found",
     "text": "We have not found anything at this address. This may be a typing error."
+  },
+  "NextcloudBreadcrumb": {
+    "root": "Shared Drives"
   }
 }
